--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -14,7 +14,7 @@ TARGET = tvbgone
 OPT = s
 
 # List C source files here. (C dependencies are automatically generated.)
-SRC = main.c WORLDcodes.c
+SRC = main.c
 
 # List Assembler source files here.
 # Make them always end in a capital .S.  Files ending in a lowercase .s
